<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_module_header"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_confirm_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_confirm_inspection"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/navigation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_cylinder_information"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/transfer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_inspection_record"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_inspection_renewal"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/track"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_check_account"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sales"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_data_sync"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/service"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_warning_reminder"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            ripple:rv_centered="false"
            ripple:rv_color="@color/appBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/analysis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/module_system_settings"
                    android:textSize="22dp" />
            </RelativeLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/company_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="检验单位:"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/company_title"
                android:text="瓶平安"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="检验许可证号:"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/number_title"
                    android:text="000000"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>